# app/go/model__tickets_buy_put_request.go
@@ -1,0 +1,31 @@
+/*
+ * WaxFlower
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.1.0
+ * Contact: keijun091221@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+
+
+type TicketsBuyPutRequest struct {
+
+	Id string `json:"id,omitempty"`
+
+	UserId string `json:"userId,omitempty"`
+}
+
+// AssertTicketsBuyPutRequestRequired checks if the required fields are not zero-ed
+func AssertTicketsBuyPutRequestRequired(obj TicketsBuyPutRequest) error {
+	return nil
+}
+
+// AssertTicketsBuyPutRequestConstraints checks if the values respects the defined constraints
+func AssertTicketsBuyPutRequestConstraints(obj TicketsBuyPutRequest) error {
+	return nil
+}
